# crudapi

./: .gitlab-ci.yml  Dockerfile  pyproject.toml
application/: __init__.py  models.py  router.py  settings.py
crudapi/: __init__.py  __main__.py  router.py  settings.py
tests/: __init__.py  test_crud.py  test_health.py
