[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["uvloop"], version = "^0.75.0"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
fastapi-crudrouter = "^0.8.5"
aiohttp = "^3.8.3"
dblib = {git = "https://gitlab.com/gerald32/dblib.git"}

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
black = "^22.12.0"
mypy = "^0.991"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
radon = "^5.1.0"
pytest-asyncio = "^0.20.3"
pytest-gevent = "^1.1.0"
types-ujson = "^4.2.1"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
